--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,9 @@
     </parent>
     <groupId>com</groupId>
     <artifactId>CloudApplicationSpring</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>CloudApplicationSpring</name>
     <description>CloudApplicationSpring</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
     <properties>
         <java.version>17</java.version>
     </properties>
